添加新表时更新api服务
