# routers/router.go
@@ -16,6 +16,11 @@ import (
 func init() {
 	ns := beego.NewNamespace("/v1",
 
+		beego.NSNamespace("/user",
+			beego.NSInclude(
+				&controllers.UserController{},
+			),
+		),
 		beego.NSNamespace("/student",
 			beego.NSInclude(
 				&controllers.StudentController{},
